# coding_interview_final

./: .gitignore  CANDIDATE_INSTRUCTIONS.md  CMakeLists.txt  FILE_GUIDE.md.encrypted  INTERVIEWER_GUIDE.md.encrypted  PROBLEM.md  PROJECT_SUMMARY.md.encrypted  QUICK_REFERENCE.md.encrypted  README.md  SOLUTION.md.encrypted  START_HERE.md.encrypted  build.ps1  build.sh  decrypt_interviewer_files.py  encrypt_interviewer_files.py
include/: uart_driver.h  uart_registers.h
src/: main.cpp  uart_driver.cpp  uart_registers.cpp
tests/: test_main.cpp  uart_basic_tests.cpp  uart_fifo_tests.cpp
